many small final touches

--- a/appendix_a.Rmd
+++ b/appendix_a.Rmd
@@ -11,9 +11,9 @@ The following list summarizes concerns that were taken into consideration when c
 
 *	For the class of liquids, only the lateral /l/ is used, disregarding the sub-class of *rhotics* that are phonetically very varied and highly inconsistent between different languages in terms of phonetic detail [see, e.g., @lindau1980storysk; @ladefoged1996rhotics; @wiese2001phonology]. In that context, it is important to note that the set of stimuli used in this stduy was created with the intention of being used on speakers of many different languages in which the relevant segments can map to native segments to a comparable degree. There are therefore no liquid plateaus in the experimental set.
 
-*	The alveolar /s/ is used for the class of voiceless sibilants (voiceless coronal fricatives). In C~1~ positions, the post-alveolar /ʃ/ is also used to control for potential language-specific effects that may appear due to specific restrictions on /s/. For example, in German /ʃC/ onset clusters can be licit, while /sC/ onset clusters occur only marginally in loanwords.
+*	The alveolar /s/ is used for the class of voiceless sibilants (voiceless coronal fricatives). In C~1~ positions, the post-alveolar /ʃ/ is also used to control for potential language-specific effects that may appear due to selective restrictions on /s/. For example, in German /ʃC/ onset clusters can be licit, while /sC/ onset clusters occur only marginally in loanwords.
 
-*	Stops are used only in C~2~ position, and only voiceless stops are used in order to keep the size of the stimulus set reasonably small. Stops in C~1~ position are avoided since it is also the phrase-initial position of the stimuli, which is practically devoid of acoustic cues for the closure phase of the stop. Within the stream of speech, the movement of articulators towards the target of a stop's closure phase leave auditory traces from the preceding segment and into the closure of the stop, containing important information about the identity of the stop [e.g. @barry1984place]. In that sense, a stop in C~1~ position at the beginning of a phrase contains only a transient release burst. 
+*	Stops are used only in C~2~ position, and only voiceless stops are used in order to keep the size of the stimulus set reasonably small. Stops in C~1~ position are avoided since it is also the phrase-initial position of the stimuli, which is practically devoid of acoustic cues for the closure phase of the stop. Within the stream of speech, the movement of articulators towards the target of a stop's closure phase leaves auditory traces from the preceding segment and into the closure of the stop, containing important information about the identity of the stop [e.g. @barry1984place]. In that sense, a stop in C~1~ position at the beginning of a phrase contains only a transient release burst. 
 Furthermore, note that all the stop-initial clusters (with the exclusion of *stop-stop* plateaus) are generally well-formed according to all sonority models tested here, such that their added value in this comparison would have been smaller than their cost (in terms of the size of the stimulus set).
 
 * The set includes one instance of the dorsal consonant /k/ instead of the coronal /t/ as an alternative to a labial-coronal cluster, which would have required a labial liquid. Instead, the *coronal-dorsal* cluster /lk/ is used to retain the same direction of a labial-coronal cluster---both are front-to-back in terms of places of articulation. There are no other dorsals in the set (i.e., no fricative, nasal or liquid dorsal), as these tend to be relatively more marked and less consistent between languages.
@@ -27,17 +27,16 @@ clusters while banning /ʃf/.
 Audio stimuli for the experiment were recorded by a phonetically trained native Hebrew speaker, AA, and a phonetically trained native German speaker, HN, in a sound-attenuated booth at the phonetics
 laboratory of the first author's university.
 <!-- University of Cologne.  -->
-Speech was recorded via a head-mounted headset condenser microphone (AKG C420), capturing mono digital audio files at a resolution of 44.1k Hz sample-rate and 24 bit depth with a *Metric Halo MIO 2882* audio interface. Selected audio takes were treated in the original high resolution for DC offset correction and compression of ultra low frequencies under 52 Hz (to compensate for some room reverberation effects). Audio was then downgraded from 24 to 16 bit depth with *Goodhertz Good Dither* dithering to be used in the perception task running on *OpenSesame* 3.1.9 [@mathot2012opensesame]. The audio that was submitted to analyses by the *APP Detector* (see *Obtaining Periodic Energy Data* below) was also downgraded in sample-rate to 16k Hz. Finally, all audio takes, at all resolutions, were normalized to the same RMS target of -20 dBFS (*dB Full Scale*).
+Speech was recorded via a head-mounted headset condenser microphone (AKG C420), capturing mono digital audio files at a resolution of 44.1k Hz sample-rate and 24 bit depth with a *Metric Halo MIO 2882* audio interface. Selected audio takes were treated in the original high resolution for DC offset correction and compression of ultra low frequencies under 52 Hz (to compensate for some room reverberation effects). Audio was then downgraded from 24 to 16 bit depth with dithering (*Goodhertz Good Dither*) to be used in the perception task running on *OpenSesame* 3.1.9 [@mathot2012opensesame]. The audio that was submitted to analyses by the *APP Detector* (see *Obtaining Periodic Energy Data* below) was also downgraded in sample-rate to 16k Hz. Finally, all audio takes, at all resolutions, were normalized to the same RMS target of -20 dBFS (*dB Full Scale*).
 
+To record the stimuli, the combined 87 word-like stimuli (29 targets and 58 fillers) were embedded within carrier sentences in non-final position and produced with default declarative intonation in order to maintain consistent prosody. Carrier sentences were also designed to minimize potential effects of resyllabification as well as co-articulation by controlling the segmental makeup immediately preceding and following target words (see examples in (\@ref(ex:sentence1)--\@ref(ex:sentence2))). 
+The original sentence elicitation lists are available at the OSF repository in mixed Hebrew, German and phonemic transcripts in the form of slide presentations that were used in this self-paced task
+(see *Supplementary Data* below).
 
 \begin{exe}
 \ex \textbf{/ze maʁˈgiʃ \emph{CCal} kaˈʁe.ga/} (Hebrew: ʼit feels (like) \emph{CCal} at the momentʼ) \label{ex:sentence1}
 \ex \textbf{er muss \emph{CCal} kaufen} (German: ʼhe must buy \emph{CCal}ʼ) \label{ex:sentence2}
 \end{exe}
-
-To record the stimuli, the combined 87 word-like stimuli (29 targets and 58 fillers) were embedded within carrier sentences in non-final position and produced with default declarative intonation, in order to maintain consistent prosody. Carrier sentences were also designed to minimize potential effects of resyllabification as well as co-articulation by controlling the segmental makeup immediately preceding and following target words (see examples in (\@ref(ex:sentence1)--\@ref(ex:sentence2))). 
-The original sentence elicitation lists are available at the OSF repository in mixed Hebrew, German and phonemic transcripts in the form of slide presentations that were used in this self-paced task
-(see *Supplementary Data* below).
 
 ## Obtaining Periodic Energy Data {-}
 <!-- {#sec:obtaining} -->
@@ -52,14 +51,14 @@ Finally, the periodic power time series is log-transformed to yield *periodic en
 Within the log-transform function we can plug a value that reflects the threshold of effective voicing periodicity to set a meaningful zero for the periodic energy floor---the *periodic floor* in \@ref(eq:perLog). 
 This is similar to the standard *dB SPL* measurement (SPL stands for *Sound Pressure Level*), which plugs a generic value that represents the threshold of human hearing in terms of sound pressure into the denominator of the log-transform function. In this way, SPL suggests a shared reference for different dB measurements that use a meaningful zero value.
 In the case of the current periodic energy measurement the threshold of the floor is not a universal determination but a calibration that allows us to take the audio quality and the inner-workings of the APP Detector into account. 
-The effective periodicity threshold for the log-transform of the periodic energy time series was determined by extracting the maximal periodic power value obtained for voiceless portions in the set (to be sure that there was no marginal voicing in this sample, only voiceless C~1~ consonants that precede another voiceless consonant in C~2~ were measured). In this way, the value $\mathit{0}$ in our periodic energy curve is optimally calibrated to reflect pitch-related periodic components in the signal.
+The effective periodicity threshold for the log-transform of the periodic energy time series was determined by extracting the maximal periodic power value obtained for voiceless portions in the set (to be sure that there was no marginal voicing in this sample, only voiceless C~1~ consonants that precede another voiceless consonant in C~2~ were measured). In this way, the value $\mathit{0}$ in our periodic energy curve is optimally calibrated to reflect the floor of pitch-related periodic components in the signal.
 
 \begin{equation}
   periodic~energy = 10 \cdot \log_{10}\!\left(\frac{periodic~power}{periodic~floor}\right) \label{eq:perLog}
 \end{equation}
 
 Note that the periodic energy curve is smoothed further with Local Polynomial Regression Fitting (*loess*) in the figures. This is only used for additional visual clarity. All the acoustic analyses are based on the periodic energy curve before this final aesthetic smoothing (and after the other processes mentioned above). All the periodic energy curves in the figures are normalized to fit a $0$--$1$ scale.
-The codes of all the above processes are available at the OSF repository (see *Supplementary Data* below).
+The codes of all the above processes are available in the OSF repository (see *Supplementary Data* below).
 
 ## Perception Task Details {-}
 <!-- {#sec:ptask} -->
