--- a/bibs/phon_sk.bib
+++ b/bibs/phon_sk.bib
@@ -1,12 +1,53 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Aviad Albert at 2022-04-16 18:04:16 +0200 
+%% Created for Aviad Albert at 2022-04-24 00:49:21 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{davidson2010phoneticsk,
+	Author = {Davidson, Lisa},
+	Citation_Identifier = {Davidson 2010},
+	Date-Added = {2022-04-24 00:48:57 +0200},
+	Date-Modified = {2022-04-24 00:49:13 +0200},
+	Google_Scholar_Bibtex_Export_Key = {Cwss\_lbzuykJ},
+	Journal = {Journal of Phonetics},
+	Notes = {(284) (285)},
+	Number = {2},
+	Pages = {272-288},
+	Publicationstatus = {Published},
+	Publisher = {Elsevier},
+	Sentelink = {file:///Users/aviadalbert/Documents/Papers.sente6lib/Contents/Attachments/Davidson%2C%20L/2010/Phonetic%20bases%20of%20similarities.pdf,Sente,},
+	Title = {Phonetic bases of similarities in cross-language production: Evidence from {English and Catalan}},
+	Uuid = {5E63AB7B-9B57-40CE-910B-28D78A3DB5F0},
+	Volume = {38},
+	Web_Data_Source = {Google Scholar},
+	Year = {2010}}
+
+@article{dupoux1999epentheticsk,
+	Author = {Dupoux, Emmanuel and Kakehi, Kazuhiko and Hirose, Yuki and Pallier, Christophe and Mehler, Jacques},
+	Citation_Identifier = {Dupoux 1999},
+	Date-Added = {2022-04-23 11:02:52 +0200},
+	Date-Modified = {2022-04-23 11:03:16 +0200},
+	Doi = {10.1037/0096-1523.25.6.1568},
+	Google_Scholar_Bibtex_Export_Key = {DZfplcGKkYcJ},
+	Journal = {Journal of Experimental Psychology: Human Perception and Performance},
+	Keywords = {Phonotactics;Prosody;Perception Tasks;Vowels},
+	Number = {6},
+	Pages = {1568-1578},
+	Publicationstatus = {Published},
+	Publisher = {American Psychological Association},
+	Sentelink = {file:///Users/aviadalbert/Documents/Papers.sente6lib/Contents/Attachments/Dupoux%2C%20E/1999/Epenthetic%20vowels%20in%20Japanese%20%232.pdf,Sente,},
+	Tags = {Perception Tasks;Vowels;Phonotactics;Prosody},
+	Title = {Epenthetic vowels in {Japanese}: A perceptual illusion?},
+	Uuid = {0E8A6C3B-2FBC-4B09-8EAD-77A992226148},
+	Volume = {25},
+	Web_Data_Source = {Google Scholar},
+	Year = {1999},
+	Bdsk-Url-1 = {https://doi.org/10.1037/0096-1523.25.6.1568}}
 
 @manual{flemming2008asymmetriessk,
 	Author = {Flemming, Edward},
