--- a/bibs/phon_sk.bib
+++ b/bibs/phon_sk.bib
@@ -1,12 +1,44 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Aviad Albert at 2022-04-24 00:49:21 +0200 
+%% Created for Aviad Albert at 2022-05-11 11:17:21 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{albert2020propersk,
+	Author = {Albert, Aviad and Cangemi, Francesco and Ellison, T. Mark and Grice, Martine},
+	Citation_Identifier = {Albert 2020},
+	Date-Added = {2022-05-10 14:53:03 +0200},
+	Date-Modified = {2022-05-10 14:53:03 +0200},
+	Doi = {10.17605/OSF.IO/28EA5},
+	Publicationstatus = {Published},
+	Publisher = {OSF},
+	Title = {{ProPer: PROsodic analysis with PERiodic energy}},
+	Type = {[computer software]},
+	Url = {https://osf.io/28ea5},
+	Uuid = {F95FE3CC-559E-405C-AF63-5B088BCEFC56},
+	Year = {2020},
+	Bdsk-Url-1 = {https://osf.io/28ea5},
+	Bdsk-Url-2 = {https://doi.org/10.17605/OSF.IO/28EA5}}
+
+@misc{albert2021propersk,
+	Author = {Albert, Aviad and Cangemi, Francesco and Ellison, T. Mark and Grice, Martine},
+	Citation_Identifier = {Albert 2020},
+	Date-Added = {2022-05-10 14:47:03 +0200},
+	Date-Modified = {2022-05-10 14:53:42 +0200},
+	Doi = {10.17605/OSF.IO/28EA5},
+	Publicationstatus = {Published},
+	Publisher = {OSF},
+	Title = {{ProPer: PROsodic analysis with PERiodic energy}},
+	Type = {[computer software]},
+	Url = {https://osf.io/28ea5},
+	Uuid = {F95FE3CC-559E-405C-AF63-5B088BCEFC56},
+	Year = {2021},
+	Bdsk-Url-1 = {https://osf.io/28ea5},
+	Bdsk-Url-2 = {https://doi.org/10.17605/OSF.IO/28EA5}}
 
 @article{davidson2010phoneticsk,
 	Author = {Davidson, Lisa},
@@ -188,14 +220,12 @@
 	Author = {Albert, Aviad},
 	Citation_Identifier = {Albert},
 	Date-Added = {2021-12-08 00:05:03 +0100},
-	Date-Modified = {2021-12-08 00:20:27 +0100},
+	Date-Modified = {2022-05-11 11:17:21 +0200},
 	Journal = {Radical: A Journal of Phonology},
-	Note = {{in press}},
-	Publicationstatus = {in press},
+	Pubstate = {in press},
 	Sentelink = {file:///Users/aviadalbert/Documents/Papers.sente6lib/Contents/Attachments/Albert%2C%20A/!%20Unknown%20Year/Sonority%20in%20Modern%20Hebrew.pdf,Sente,},
 	Title = {Sonority in {Modern Hebrew}},
-	Uuid = {A58DF327-68DB-4DAC-9B46-EE575F140E84},
-	Year = {{in press}}}
+	Uuid = {A58DF327-68DB-4DAC-9B46-EE575F140E84}}
 
 @article{yeverechyahu2020biblicalsk,
 	Author = {Yeverechyahu, Hadas and Bat-El, Outi},
